Bug 465756 - Ignore browser.helperApps.deleteTempFileOnExit not being set in private browsing; r=bz,sdwilsh sr=bz a=blocking1.9.1+